# sdks-demo

./: README.md
go/: accounts.go  go.mod  go.sum  market.go  order.go
python/: .env.example  account.py  accounts.py  market.py  markets.py  order.py  orders.py  requirements.txt
rust/: .env.example  Cargo.toml  accounts.rs  main.rs  market.rs  order.rs
trading-bot/: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  .ruff.toml  CONFIG.md  DEVELOPMENT.md  Dockerfile  GCP_DEPLOYMENT.md  Makefile  README.md  build-and-deploy-gcp.sh  cloud_run_main.py  config.yaml  deploy-gcp.sh  docker-compose.yml  health_server.py  progress.md  pyproject.toml
trading-bot/.claude/: settings.local.json
trading-bot/bot/: account_manager.py  asset_ratio_manager.py  binance_ws.py  cli.py  config.py  deltadefi.py  log_config.py  logging.py  main.py  oms.py  order_manager.py  quote.py  quote_to_order_pipeline.py  rate_limiter.py  signer.py  unregistered_order_cleanup.py
trading-bot/bot/db/: __init__.py  outbox_worker.py  repo.py  schema.sql  sqlite.py
trading-bot/bot/oms/: manager.py
trading-bot/bot/strategy/: grid_peg.py
trading-bot/bot/venue/: base.py  binance.py
trading-bot/deploy/: systemd.service
trading-bot/docs/: 01-architecture.md  01-specification.md  02-user-guide.md  03-deployment.md  brief-spec.md  price-skew.md  strategy-implementation.md  user-demonstration.md
trading-bot/docs/architecture/: account-manager.md  binance-integration.md  database.md  deltadefi-integration.md  oms.md  overview.md  quote-engine.md  rate-limiter.md
trading-bot/tests/: test_config.py  test_quote_engine.py  test_repos.py
typescript/: .env.sample  .gitignore  package-lock.json  package.json  tsconfig.json
typescript/src/: accounts.ts  index.ts  markets.ts  orders.ts
typescript/src/accounts/: index.ts
typescript/src/markets/: index.ts
typescript/src/orders/: index.ts
