[project]
name = "trading-bot"
version = "0.1.0"
description = "DeltaDeFi trading bot"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pycardano>=0.12.0",
    "aiohttp>=3.10.0",
    "pydantic>=2.10.0",
    "python-dotenv>=1.0.0",
    "structlog>=24.0.0",
    "sidan-binance-py>=0.0.1",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=0.25.0",
    "ruff>=0.12.10",
    "mypy>=1.17.1",
    "pre-commit>=4.0.0",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "RUF"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto"
addopts = "-v --tb=short"
